--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -23,9 +23,7 @@ RUN yum install -y python27 && \
     mkdir /opt/backup && \
     chmod -R 775 /opt/backup
 
-COPY backup-restore/backup.php /opt/backup/backup.php
-COPY backup-restore/restore.php /opt/backup/restore.php
-COPY backup-restore/.env /opt/backup/.env
+COPY backup-restore/backup.php backup-restore/restore.php backup-restore/api /opt/backup/
 RUN chown -R 1001 /opt/backup
 
 # Might want to refine this (something more specific than $APP_DATA)
