--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -13,11 +13,14 @@ RUN yum update -y && \
 
 # Might want to refine this (something more specific than $APP_DATA)
 RUN chgrp -R 0 /var/run/httpd && \
-    chmod -R g+rwX /var/run/httpd && \
+    chmod -R g=u /var/run/httpd && \
     chgrp -Rf root $APP_DATA && \
     chmod -Rf g+w $APP_DATA && \
     cd $APP_DATA && \
     umask 002
+
+#Resolve the following error httpd service startup: AH02282: No slotmem from mod_heartmonitor
+RUN sed -i 's/mod_lbmethod_heartbeat.so\/mod_lbmethod_heartbeat.so/# mod_lbmethod_heartbeat.so\/mod_lbmethod_heartbeat.so/g' /etc/httpd/conf.modules.d/00-proxy.conf
 # chgrp and chmod on /var/run/httpd was previously not necessary in the php-7.4 build, however knocked myself out when using this build and had to modify perms of /var/run/httpd
 # the chgrp and chmod command was taken from Red Hat support document called 13)Permission denied: AH000058: Error retrieving pid file /run/httpd/httpd.pid - Red Hat Customer Portal
 # the solution was in a comment from 25 November 2019 10:06 PM
