--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -1,16 +1,12 @@
-FROM registry.access.redhat.com/ubi7/php-73
+FROM registry.redhat.io/rhscl/php-73-rhel7
 
 USER root
 
-# Update the image with the latest packages (recommended), then
+# Update the image with the latest packages (recommended)
+RUN yum update -y; yum clean all
+
 # Install php-xmlrpc module from RHSCL repo, remove override_install_langs so all locales can be installed, install glibc-common for all locales (locale -a)
-RUN yum update -y && \
-    yum clean all && \
-    yum install -y php-xmlrpc && \
-    yum install -y php-zip && \
-    yum install -y langpacks-fr  && \
-    yum reinstall -y glibc-common && \
-    yum clean all
+RUN yum-config-manager --enable rhel-server-rhscl-7-rpms; yum install -y rh-php72-php-xmlrpc; yum install -y rh-php73-php-zip; yum clean all; sed -i s/override_install_langs=en_US/#override_install_langs=en_US/ /etc/yum.conf; yum reinstall -y glibc-common;
 
 # Might want to refine this (something more specific than $APP_DATA)
 RUN chgrp -Rf root $APP_DATA && \
