--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -4,9 +4,7 @@ USER root
 
 # Update the image with the latest packages (recommended), then
 # Install php-xmlrpc module from RHSCL repo, remove override_install_langs so all locales can be installed, install glibc-common for all locales (locale -a)
-RUN yum update -y && \
-    yum clean all && \
-    yum install -y php-xmlrpc && \
+RUN yum install -y php-xmlrpc && \
     yum install -y php-zip && \
     yum install -y langpacks-fr  && \
     yum reinstall -y glibc-common && \
