--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -4,7 +4,8 @@ USER root
 
 # Update the image with the latest packages (recommended), then
 # Install php-xmlrpc module from RHSCL repo, remove override_install_langs so all locales can be installed, install glibc-common for all locales (locale -a)
-RUN yum update -y && \
+RUN yum remove -y rpm-plugin-systemd-inhibit && \
+    yum update -y && \
     yum install -y php-xmlrpc && \
     yum install -y php-zip && \
     yum install -y langpack-fr  && \
