--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -8,6 +8,7 @@ RUN yum remove -y rpm-plugin-systemd-inhibit && \
     yum update -y && \
     yum install -y php-xmlrpc && \
     yum install -y php-zip && \
+    yum install -y glibc-all-langpacks && \
     yum reinstall -y glibc-common && \
     yum clean all
 
